# JuliaBridge

./: .gitignore  README.md  README_PyPI.md  README_zh_cn.md  bridge.jl  bridge.py  data.mat  data.txt  payload.json  pyproject.toml  test.jl  test.py
.temp/: payload.json
src/juliabridge/: bridge.jl  main.py
src/juliabridge/.temp/: payload.json
tests/: test.jl  test.py
